added .env codes in variables

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_API_KEY=
-REACT_APP_AUTH_DOMAIN=
-REACT_APP_PROJECT_ID
-REACT_APP_STORAGE_BUCKET=
-REACT_APP_MESSAGING_SENDER_ID=
-REACT_APP_APP_ID=
+REACT_APP_API_KEY=AIzaSyBeLJ592K2J5pyVBg21UfCtdkN_EBMOjDY
+REACT_APP_AUTH_DOMAIN=resourceplus-8150d.firebaseapp.com
+REACT_APP_PROJECT_ID=resourceplus-8150d
+REACT_APP_STORAGE_BUCKET=resourceplus-8150d.appspot.co
+REACT_APP_MESSAGING_SENDER_ID=504798650406
+REACT_APP_APP_ID=1:504798650406:web:e36cdee8878e15d08f86e7
 REACT_APP_EMAIL_ADMIN=seanamckinney8@gmail.com
