--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.10",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
